--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -44,7 +44,7 @@
                    target="_blank"
                    rel="noopener">{% trans "Open folder" %}</a>
               {% endif %}
-              {% if show_delete_button and type == 'msgraph-mail' %}
+              {% if show_email_delete_button and type == 'msgraph-mail' %}
                 <span class="delete-mail">
                   <button class="button button--deletion-button"
                           id="{{ document_report.pk }}"
@@ -56,6 +56,22 @@
                           hx-trigger="click"
                           hx-indicator="closest tr"
                           hx-confirm="{% blocktrans %}You are about to delete selected email from your mailbox. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
+                    {% trans "Delete" %}
+                  </button>
+                </span>
+              {% endif %}
+              {% if show_file_delete_button and type == 'msgraph-files' %}
+                <span class="delete-file">
+                  <button class="button button--deletion-button"
+                          id="{{ document_report.pk }}"
+                          name='delete-file'
+                          title="{% trans 'Deletes file from your online drive' %}"
+                          hx-post="{% url 'delete-file' document_report.pk|unlocalize %}"
+                          hx-push-url="false"
+                          hx-swap="none"
+                          hx-trigger="click"
+                          hx-indicator="closest tr"
+                          hx-confirm="{% blocktrans %}You are about to delete selected file from your online drive. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
                     {% trans "Delete" %}
                   </button>
                 </span>
