--- a/src/os2datascanner/projects/report/reportapp/templates/components/modals/snackbarOld.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/modals/snackbarOld.html
@@ -1,3 +1,5 @@
+<!-- Old version of the snackbar component -->
+
 {# Snackbar for popup messages - Using oob swap, to support django messages #}
 {% load static %}
 
@@ -6,7 +8,7 @@
     <div class="message-popup ">
       {{ message }}
       <button type="button"
-              onclick="closeSnackBar(this)"
+              onclick="closeOldSnackBar(this)"
               class="close-modal button button--modal-close"
               title="Close">
         <svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
