--- a/src/os2datascanner/projects/static/scss/components/_datatable.scss
+++ b/src/os2datascanner/projects/static/scss/components/_datatable.scss
@@ -666,7 +666,7 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  margin-top: .5rem;
+  // margin-top: .5rem;
 
   > *:not(:last-child) {
     margin-right: 0.5rem;
