--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -1,7 +1,5 @@
 {% load i18n l10n humanize admin_urls handle_extras %}
-
 {% with type=document_report.matches.handle|find_type_label %}
-
   {% with frag=document_report.matches.matches|merge_renderable_match_fragments %}
     <tr data-type="{{ type }}"
         {% if request.session.last_opened == document_report.pk|unlocalize %}class="highlighted"{% endif %}>
@@ -13,95 +11,92 @@
                  name="table-checkbox"
                  class="datatable-checkbox"
                  data-report-pk="{{ document_report.pk|unlocalize }}" />
-
           <label for="table-checkbox-{{ document_report.pk|unlocalize }}"
                  aria-label="{% trans 'Select result' %}"
                  title="{% trans 'Select result' %}"></label>
         </div>
       </td>
-
       <td class="datatable__column--name">
         <div class="tooltip">
           <div class="overflow-ellipsis">
             <strong data-tooltip-text>{{ document_report.matches.handle.presentation_name }}</strong>
           </div>
         </div>
+        <div class="tableUI__container">
 
-        {% comment %} HTML is a programming language btw {% endcomment %}
-
-        {% if document_report.last_opened_time or document_report.matches.handle|present_url or type != 'ews' and type != 'msgraph-mail' and document_report.matches.handle|find_parent:type|find_file_folder %}
-          <div class="hit-link">
-            <div class="button-group"
-                 name='open-button'
-                 hx-post="{% url 'open-match' document_report.pk|unlocalize %}"
-                 hx-push-url="false"
-                 hx-swap="none"
-                 hx-trigger="click target:.btn-{{ document_report.pk|unlocalize }}"
-                 hx-indicator="#report-page-indicator">
-              {% if document_report.matches.handle|present_url %}
-                <a href="{{ document_report.matches.handle|present_url }}"
-                   class="button button--text-button btn-{{ document_report.pk|unlocalize }}"
-                   target="_blank"
-                   rel="noopener">{% trans "Open" %}</a>
+          {% comment %} HTML is a programming language btw {% endcomment %}
+          {% if document_report.last_opened_time or document_report.matches.handle|present_url or type != 'ews' and type != 'msgraph-mail' and document_report.matches.handle|find_file_folder %}
+            <div class="hit-link">
+              <div class="button-group"
+                   name='open-button'
+                   hx-post="{% url 'open-match' document_report.pk|unlocalize %}"
+                   hx-push-url="false"
+                   hx-swap="none"
+                   hx-trigger="click target:.btn-{{ document_report.pk|unlocalize }}"
+                   hx-indicator="#report-page-indicator">
+                {% if document_report.matches.handle|present_url %}
+                  <a href="{{ document_report.matches.handle|present_url }}"
+                     class="button button--text-button btn-{{ document_report.pk|unlocalize }}"
+                     target="_blank"
+                     rel="noopener">{% trans "Open" %}</a>
+                {% endif %}
+                {% if document_report.matches.handle|find_file_folder %}
+                  <a href="{{ document_report.matches.handle|find_file_folder }}"
+                     class="button button--text-button btn-{{ document_report.pk|unlocalize }}"
+                     target="_blank"
+                     rel="noopener">{% trans "Open folder" %}</a>
+                {% endif %}
+                {% if show_email_delete_button and type == 'msgraph-mail' %}
+                  <span class="delete-mail">
+                    <button class="button button--deletion-button"
+                            id="{{ document_report.pk }}"
+                            name='delete-mail'
+                            title="{% trans 'Deletes email from your mailbox' %}"
+                            hx-post="{% url 'delete-mail' document_report.pk|unlocalize %}"
+                            hx-push-url="false"
+                            hx-swap="none"
+                            hx-trigger="click"
+                            hx-indicator="closest tr"
+                            hx-confirm="{% blocktrans %}You are about to delete selected email from your mailbox. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
+                      {% trans "Delete" %}
+                    </button>
+                  </span>
+                {% endif %}
+                {% if show_file_delete_button and type == 'msgraph-files' %}
+                  <span class="delete-file">
+                    <button class="button button--deletion-button"
+                            id="{{ document_report.pk }}"
+                            name='delete-file'
+                            title="{% trans 'Deletes file from your online drive' %}"
+                            hx-post="{% url 'delete-file' document_report.pk|unlocalize %}"
+                            hx-push-url="false"
+                            hx-swap="none"
+                            hx-trigger="click"
+                            hx-indicator="closest tr"
+                            hx-confirm="{% blocktrans %}You are about to delete selected file from your online drive. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
+                      {% trans "Delete" %}
+                    </button>
+                  </span>
+                {% endif %}
+              </div>
+              {% if document_report.last_opened_time %}
+                {% with document_report.last_opened_time|naturaltime as time_since %}
+                  <div class="last-opened">{% trans "Opened" %} {{ time_since|capfirst }}.</div>
+                {% endwith %}
               {% endif %}
-              {% if document_report.matches.handle|find_file_folder %}
-                <a href="{{ document_report.matches.handle|find_file_folder }}"
-                   class="button button--text-button btn-{{ document_report.pk|unlocalize }}"
-                   target="_blank"
-                   rel="noopener">{% trans "Open folder" %}</a>
-              {% endif %}
-              {% if show_email_delete_button and type == 'msgraph-mail' %}
-                <span class="delete-mail">
-                  <button class="button button--deletion-button"
-                          id="{{ document_report.pk }}"
-                          name='delete-mail'
-                          title="{% trans 'Deletes email from your mailbox' %}"
-                          hx-post="{% url 'delete-mail' document_report.pk|unlocalize %}"
-                          hx-push-url="false"
-                          hx-swap="none"
-                          hx-trigger="click"
-                          hx-indicator="closest tr"
-                          hx-confirm="{% blocktrans %}You are about to delete selected email from your mailbox. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
-                    {% trans "Delete" %}
-                  </button>
-                </span>
-              {% endif %}
-              {% if show_file_delete_button and type == 'msgraph-files' %}
-              <span class="delete-file">
-                <button class="button button--deletion-button"
-                        id="{{ document_report.pk }}"
-                        name='delete-file'
-                        title="{% trans 'Deletes file from your online drive' %}"
-                        hx-post="{% url 'delete-file' document_report.pk|unlocalize %}"
-                        hx-push-url="false"
-                        hx-swap="none"
-                        hx-trigger="click"
-                        hx-indicator="closest tr"
-                        hx-confirm="{% blocktrans %}You are about to delete selected file from your online drive. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
-                  {% trans "Delete" %}
-                </button>
-              </span>
-            {% endif %}
-
-              {% if settings.ALLOW_SHOW_ERRORS and document_report.problem %}
-                <!-- Trigger for the popover -->
-                <i class="material-icons popoverTrigger popover__trigger-element table__icon--warning"
-                   data-popover-id="popover-{{ document_report.pk }}">warning</i>
- 
-                <!-- Popover content -->
-                <div id="popover-{{ document_report.pk }}" class="popover popover--yellow">
-                  {% include "components/modals/popover_component.html" with popover_data=popover_data error_text=document_report.problem.message %}
-                </div>
-              {% endif %}
-
             </div>
-            {% if document_report.last_opened_time %}
-              {% with document_report.last_opened_time|naturaltime as time_since %}
-                <div class="last-opened">{% trans "Opened" %} {{ time_since|capfirst }}.</div>
-              {% endwith %}
-            {% endif %}
-          </div>
-        {% endif %}
+          {% endif %}
+          {% if settings.ALLOW_SHOW_ERRORS and document_report.problem %}
+            <!-- Trigger for the popover -->
+            <i class="material-icons popoverTrigger popover__trigger-element table__icon--warning"
+               data-popover-id="popover-{{ document_report.pk }}">warning</i>
+ 
+            <!-- Popover content -->
+            <div id="popover-{{ document_report.pk }}" class="popover popover--yellow">
+              {% include "components/modals/popover_component.html" with popover_data=popover_data error_text=document_report.problem.message %}
+            </div>
+          {% endif %}
+        </div>
       </td>
       <td class="datatable__column--matchcount">{{ frag.matches|length }}</td>
       <td class="datatable__column--datasource_last_modified">
