[#60230]Change wording in reportmodule manual

--- a/src/os2datascanner/projects/report/reportapp/templates/manual.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/manual.html
@@ -75,8 +75,8 @@
       </p>
       <p>
         {% blocktrans trimmed %}
-        Note that, instead of organizationname the part of the customers link that comes 
-        before ".dk" should be input. 
+        Note that, instead of "organizationname" the part of the link to the organization's website 
+        that comes before ".dk" should be input.
         {% endblocktrans %}
       </p>
       <p>{% trans "From here, sign in using the username and password usually used for these systems." %}</p>
