[#58195] Add review changes

--- a/src/os2datascanner/projects/shared/templates/components/feedback/snackbarNew.html
+++ b/src/os2datascanner/projects/shared/templates/components/feedback/snackbarNew.html
@@ -32,4 +32,4 @@
   {% endfor %}
 </div>
 
-<script src="{% static 'js/modals/snackBarNew.js' %}"></script>
+<script src="{% static 'js/modals/snackBars.js' %}"></script>
