--- a/src/os2datascanner/projects/report/reportapp/templates/content.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/content.html
@@ -73,7 +73,7 @@
     <div class="message-popup ">
       {{ message }}
       <button type="button"
-              onclick="closeSnackBar(this)"
+              onclick="closeOldSnackBar(this)"
               class="close-modal button button--modal-close"
               title="Close">
         <svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
