[#58766] Show both new and unhandled results charts in DPO overview

--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
@@ -231,15 +231,13 @@
   </div> {% endcomment %}
 
   <div class="statistic_wrapper">
-    <!-- line and bar chart - new and unhandled matches -->
+    <!-- Line chart - unhandled matches -->
     <div class="statistic data_box large">
       <div class="statistic_header">
         <div>
           <h1 class="page-title__sub">{% trans "Development overview" %}</h1>
           <p class="chart_description"
              data-chartid="development-unhandled-results">{% trans "Unhandled results by month" %}</p>
-          <p class="hidden chart_description"
-             data-chartid="development-new-results">{% trans "New results by month" %}</p>
         </div>
         <div class="statistic_header_nav">
           <div>
@@ -258,19 +256,42 @@
               <span>{% trans "Reset" %}</span>
             </button>
           </div>
-          <div class="dropdown">
-            <select>
-              <option value="development-unhandled-results">{% trans "Unhandled results" %}</option>
-              <option value="development-new-results">{% trans "New results" %}</option>
-            </select>
-          </div>
         </div>
       </div>
       <div class="chart_container" data-chartid="development-unhandled-results">
         <canvas class="line_chart canvas_size" id="line_chart_unhandled_matches"></canvas>
       </div>
-      <div class="hidden chart_container "
-           data-chartid="development-new-results">
+    </div>
+  </div>
+
+  <div class="statistic_wrapper">
+    <!-- Bar chart - new matches -->
+    <div class="statistic data_box large">
+      <div class="statistic_header">
+        <div>
+          <h1 class="page-title__sub">{% trans "Development overview" %}</h1>
+          <p class="chart_description" data-chartid="development-new-results">{% trans "New results by month" %}</p>
+        </div>
+        <div class="statistic_header_nav">
+          <div>
+            <button class="graph-zoom-info expand">
+              <i class="material-icons" aria-hidden="true">search</i>
+            </button>
+            <div class="dropdown-container">
+              <div class="graph-zoom-info-dropdown">
+                {% trans "Hold and drag your mouse to zoom in on part of the graph. Hold shift while using the mouse wheel to manually zoom. Use the reset button to return the graph to normal." %}
+
+              </div>
+            </div>
+          </div>
+          <div>
+            <button class="sorting-options" onclick="resetZoomDevelopment()">
+              <span>{% trans "Reset" %}</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="chart_container" data-chartid="development-new-results">
         <canvas class="bar_chart canvas_size bar_chart_vertical"
                 id="bar_chart_new_matches_by_month"></canvas>
       </div>
