[#58766] Show 'no data' default on line chart

--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
@@ -237,7 +237,7 @@
         <div>
           <h1 class="page-title__sub">{% trans "Development overview" %}</h1>
           <p class="chart_description"
-             data-chartid="development-unhandled-results">{% trans "Unhandled results by month" %}</p>
+             data-chartid="development-unhandled-results">{% trans "Accumulated unhandled results by month" %}</p>
         </div>
         <div class="statistic_header_nav">
           <div>
