--- a/src/os2datascanner/projects/static/scss/components/_organizations.scss
+++ b/src/os2datascanner/projects/static/scss/components/_organizations.scss
@@ -31,13 +31,18 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  padding-left: 0.25rem;
 
   font-size: 0.8rem;
 
+  &__status-container {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+  }
+
   .response-icon {
     font-size: inherit;
-    height: 1.5rem;
+    height: 1.25rem;
 
     &--error {
       color: var(--color-error);
@@ -53,6 +58,10 @@
       animation-delay: 0.25s, 0.25s;
       animation-duration: 1s;
       animation-iteration-count: infinite;
+    }
+
+    .material-icons {
+      font-size: 1.25rem;
     }
   }
 }
